# Candle-SFML3

./: CMakeLists.txt  README.md  demo.cpp
include/Candle/: LightingArea.hpp
src/: Color.cpp  DirectedLight.cpp  LightSource.cpp  LightingArea.cpp  Line.cpp  RadialLight.cpp
